infrastructure/k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: dev
  annotations:
    # nginx.ingress.kubernetes.io/auth-url: "http://user-service.dev.svc.cluster.local:3000/auth/validate"
    # nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
spec:
  ingressClassName: nginx
  rules:
    - http: # No host field = matches ANY hostname
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000

          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3002

          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3003

          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3004

          - path: /api/v1/deliveries
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 3005

          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3006

          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3007
